--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,6 +1,6 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns="sap.m" 
     controllerName="tcs.hr.hire.controller.View1">
-    <Page title="Products">
+    <Page title="All Products">
         <headerContent>
             <Button icon="sap-icon://action" press="onNext" />
         </headerContent>
